1.20.1 merge fixes